[gd_scene load_steps=12 format=3 uid="uid://740xgis2sqf5"]

[ext_resource type="TileSet" uid="uid://cr40xnvmsurgv" path="res://Scene/Dungeon/Tilemap/Pyramide.tres" id="1_6225a"]
[ext_resource type="PackedScene" uid="uid://dcqgi85erd4p3" path="res://Scene/Actor/Character/L'homme_d'affaire/LHommeDAffaire.tscn" id="1_y2e7b"]
[ext_resource type="PackedScene" uid="uid://c6iodv62becyt" path="res://Scene/Actor/PNJ/Hephaistos/Hephaistos.tscn" id="2_50giu"]
[ext_resource type="Script" path="res://Scene/UI/Blackwell.gd" id="3_3onsu"]
[ext_resource type="PackedScene" uid="uid://dnpsajap57a67" path="res://Scene/UI/MenuPause.tscn" id="4_0i8dl"]
[ext_resource type="PackedScene" uid="uid://u64o5fe8tipg" path="res://Scene/UI/Commerce/SellObject.tscn" id="4_sxwtc"]
[ext_resource type="Script" path="res://Scene/UI/MenuManager.gd" id="5_edh76"]
[ext_resource type="PackedScene" uid="uid://c3u0g3tyno108" path="res://Scene/UI/Commerce/ChangeSpell.tscn" id="5_n336u"]
[ext_resource type="PackedScene" uid="uid://dr3r7hkoehfmr" path="res://Scene/Actor/PNJ/Tezcatlipoca/Tezcatlipoca.tscn" id="6_wuvbb"]
[ext_resource type="PackedScene" uid="uid://3u5ru68ope1e" path="res://Scene/InteractiveObject/BreakableObject/LittleJarre.tscn" id="10_wcsxf"]
[ext_resource type="PackedScene" uid="uid://2bd6ryf16qeo" path="res://Scene/Actor/Ennemy/hieroglyphe_gardien/hieroglyphe_gardien.tscn" id="11_h3hd6"]

[node name="Hub" type="Node2D"]
y_sort_enabled = true
position = Vector2(0, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_6225a")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 65536, 1, -65535, 65536, 1, -65534, 65536, 1, -65533, 65536, 1, -65532, 65536, 1, -65531, 65536, 1, -65530, 65536, 1, -65529, 65536, 1, -65528, 65536, 1, -65527, 65536, 1, -65526, 65536, 1, 0, 65537, 3, 1, 65537, 3, 2, 65537, 3, 3, 65537, 3, 4, 65537, 3, 5, 131073, 3, 6, 131073, 3, 7, 131073, 3, 8, 131073, 3, 9, 131073, 3, 10, 131073, 3, 65546, 65537, 3, 65545, 65537, 3, 65544, 131073, 3, 65543, 131073, 3, 65542, 131073, 3, 65541, 131073, 3, 65540, 131073, 3, 65539, 131073, 3, 65538, 65537, 3, 65537, 65537, 3, 65536, 65537, 3, 131072, 65537, 3, 131073, 65537, 3, 131074, 131073, 3, 131075, 131073, 3, 131076, 131073, 3, 131077, 131073, 3, 131078, 131073, 3, 131079, 131073, 3, 131080, 131073, 3, 131081, 65537, 3, 131082, 65537, 3, 196618, 131073, 3, 196617, 131073, 3, 196616, 131073, 3, 196615, 131073, 3, 196614, 131073, 3, 196613, 131073, 3, 196612, 131073, 3, 196611, 131073, 3, 196610, 131073, 3, 196609, 131073, 3, 196608, 65537, 3, 262146, 131073, 3, 262147, 131073, 3, 262148, 131073, 3, 262149, 131073, 3, 262150, 131073, 3, 262151, 131073, 3, 262152, 131073, 3, 262153, 131073, 3, 262154, 131073, 3, 11, 65537, 3, 65547, 65537, 3, 131083, 131073, 3, 196619, 131073, 3, 262155, 131073, 3, 327691, 131073, 3, 327690, 131073, 3, 327689, 131073, 3, 327688, 131073, 3, 327687, 131073, 3, 327686, 131073, 3, 327685, 131073, 3, 327684, 131073, 3, 327683, 131073, 3, 327682, 131073, 3, -65525, 65536, 1, 262144, 131073, 3, 327680, 131073, 3, 327681, 131073, 3, 262145, 131073, 3, -131072, 65536, 0, -131071, 65536, 0, -131070, 65536, 0, -131069, 65536, 0, -131068, 65536, 0, -131067, 65536, 0, -131066, 65536, 0, -131065, 65536, 0, -131064, 65536, 0, -131063, 65536, 0, -131062, 65536, 0, -131061, 65536, 0, -131060, 131072, 0, -65537, 0, 0, -1, 0, 1, 65535, 0, 1, 131071, 0, 1, 196607, 0, 1, 262143, 0, 1, 327679, 0, 1, 393215, 0, 1, -65524, 131072, 1, 12, 131072, 1, 65548, 131072, 1, 131084, 131072, 1, 196620, 131072, 1, 262156, 131072, 1, 327692, 131072, 1, 393228, 131072, 2, 458751, 0, 2, 393216, 65536, 2, 393217, 65536, 2, 393218, 65536, 2, 393219, 65536, 2, 393220, 65536, 2, 393221, 65536, 2, 393222, 65536, 2, 393223, 65536, 2, 393224, 65536, 2, 393225, 65536, 2, 393226, 65536, 2, 393227, 65536, 2)

[node name="ObstacleTilemap" type="TileMap" parent="."]
tile_set = ExtResource("1_6225a")
format = 2
layer_0/name = "hitbox"
layer_0/tile_data = PackedInt32Array(-65534, 2, 11, -65533, 65538, 11, -65530, 131074, 11, -65531, 196610, 11, -65532, 327682, 11)

[node name="LHommeDAffaire" parent="." instance=ExtResource("1_y2e7b")]
position = Vector2(102, 52)
collision_layer = 3
speed = 300.0

[node name="Hephaistos" parent="." groups=["PNJ"] instance=ExtResource("2_50giu")]
position = Vector2(555, 77)

[node name="Tezcatlipoca" parent="." instance=ExtResource("6_wuvbb")]
position = Vector2(112, 192)

[node name="Tezcatlipoca2" parent="." instance=ExtResource("6_wuvbb")]
position = Vector2(352, 120)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuManager" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_edh76")

[node name="BlackVell" type="ColorRect" parent="CanvasLayer/MenuManager"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
script = ExtResource("3_3onsu")

[node name="MenuPause" parent="CanvasLayer/MenuManager" instance=ExtResource("4_0i8dl")]
visible = false
layout_mode = 1

[node name="SellObject" parent="CanvasLayer/MenuManager" instance=ExtResource("4_sxwtc")]
visible = false
layout_mode = 1

[node name="ChangeSpell" parent="CanvasLayer/MenuManager" instance=ExtResource("5_n336u")]
visible = false
layout_mode = 1

[node name="LittleJarre" parent="." instance=ExtResource("10_wcsxf")]
position = Vector2(384, 256)

[node name="LittleJarre2" parent="." instance=ExtResource("10_wcsxf")]
position = Vector2(224, 256)

[node name="LittleJarre3" parent="." instance=ExtResource("10_wcsxf")]
position = Vector2(352, 256)

[node name="LittleJarre4" parent="." instance=ExtResource("10_wcsxf")]
position = Vector2(448, 160)

[node name="LittleJarre5" parent="." instance=ExtResource("10_wcsxf")]
position = Vector2(480, 224)

[node name="Hieroglyphe_Gardien" parent="." instance=ExtResource("11_h3hd6")]
position = Vector2(678, 321)
